brendabeltran.me/brenda-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brenda
spec:
  selector:
    matchLabels:
      app: brenda 
  replicas: 3
  template:
    metadata:
      labels:
        app: brenda 
    spec:
      containers:
      - name: node
        image: beltranalex928/brenda:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
