brendabeltran.me/brenda-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brenda
  labels:
    app: brenda
spec:
  type: NodePort
  ports:
  - port: 4000
    nodePort: 30003
  selector:
    app: brenda
