brendabeltran.me/brenda-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brenda
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - brendabeltran.me
    secretName: brendabeltran.me
  rules:
  - host: brendabeltran.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: brenda
            port:
              number: 3000
